--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Welcome to my app!</h1>
-<p>Sign up <%= link_to "here", "#" %>.</p>
+<div class="jumbotron">
+	<h1>Welcome to my app!</h1>
+	<p><%= link_to "Sign up", "#", class: "btn btn-primary btn-lg" %> <%= link_to "Log in", "#", class: "btn btn-primary btn-lg" %></p>	
+</div>
