--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,10 +1,16 @@
-$body-bg: #ecf0f1;
-$navbar-inverse-bg: #27ae60;
-$navbar-inverse-link-color: white;
-$brand-primary: #2ecc71;
-$jumbotron-bg: #bdc3c7;
+$body-bg:											#ecf0f1;
+$brand-primary: 							#2ecc71;
+$jumbotron-bg: 								#bdc3c7;
+$navbar-height:               45px;
+$navbar-default-bg:           white;
+$navbar-default-brand-color:  #c0392b;
+$brand-primary:               #c0392b;
 @import 'bootstrap';
 
 .center{
 	text-align: center;
+}
+
+.navbar-brand {
+     font-weight: bold;
 }
