--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
-<h1>About us</h1>
-<p>We are working on our One Month Rails Pinteresting app!</p>
+<h1>About</h1>
+<p>This application was build by Karl Van Camp during the One Month Rails course.</p>
